# Unsupervised-Segmentation-of-Rice-Grains

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: geometric_metrics_consolidated.csv  geometric_metrics_consolidated_legacy.xlsx
src/: __init__.py
src/inference/: predict.py
src/models/: segmentation_net.py
src/postprocessing/: README.md  __init__.py  calculate_metrics.py  clustering.py  normalize_colors.py  utils.py  visualization.py
src/preprocessing/: hsv_tuner.py  masking.py
src/training/: train.py
