[project]
name = "unsupervised-segmentation-of-rice-grains"
version = "0.1.0"
description = "Unsupervised defect segmentation of rice grain images using deep learning"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Sakshee Patil", email = ""}
]

dependencies = [
    "numpy>=1.26.0",
    "opencv-python>=4.10.0",
    "scikit-learn>=1.5.0",
    "pillow>=10.4.0",
    "pandas>=2.2.0",
    "scikit-image>=0.24.0",
    "matplotlib>=3.9.0",
    "scipy>=1.14.0",
    "seaborn>=0.13.0",
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "tqdm>=4.66.0",
    "openpyxl>=3.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
# For CUDA support, users can install with:
# uv pip install torch torchvision --index-url https://download.pytorch.org/whl/cu128
